public interface FlyBehavior{
    String Name();
    boolean Wings();
    boolean canFly();
}
