public interface SoundBehavior {
    String Name();
    void Sound();
    int Speed(); // 1-5

    String getSound();

    void setSound(String sound);
}
