@startuml
'https://plantuml.com/class-diagram

interface SoundBehavior {
+String Name()
+void Sound()
+int Speed()
+String getSound()
+void setSound(String sound)
}

interface FlyBehavior{
+String Name()
+boolean Wings()
+boolean canFly()
}

abstract class TorchBehavior{
- level:int
+String Name()
+Torching(int level)
+boolean isLegend()
+int getFireLevel()
}

class Lion{
-String sound
+String Name()
+void Sound()
+String getSound()
+void setSound(String sound)
+int Speed()
}

class Pig{
-String sound
+String Name()
+void Sound()
+String getSound()
+void setSound(String sound)
+int Speed()
}

class Dragon{
+String Name()
+Torching(int level)
+boolean isLegend()
+int getFireLevel()
}

class Chimera{
-String sound
- uniqueInstance:Chimera
+Chimera(int level)
+String Name()
+void Sound()
+String getSound()
+void setSound(String sound)
+int Speed()
+boolean Wings()
+boolean canFly()
+boolean isLegend()
+void run(Runnable action)
}

SoundBehavior <|.. Lion
SoundBehavior <|.. Pig
SoundBehavior <|.. Chimera
FlyBehavior <|.. Chimera
TorchBehavior <|-- Dragon
TorchBehavior <|-- Chimera

@enduml